tests/fail/bad_name_static.rs
/*
 * Copyright (c) 2025 Tomi Leppänen
 * SPDX-License-Identifier: MIT
 */

use sine_macro::sine_wave;

sine_wave! {
    static STATIC_WAVE = something_else();
}

fn main() {}
